2015-07-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Revert r22625.

	* misc/kb_redis.c (redis_vcommand, redis_command): Remove functions.
	(try_database_index, fetch_max_db_index_compat, fetch_max_db_index)
	(select_database, redis_release_db, redis_transaction_new)
	(redis_transaction_cmd, redis_transaction_end, redis_cmd): Use
	redisCommand() and redisvCommand().

2015-06-25  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvticache.c (nvticache_get_oids): New function.

	* base/nvticache.h: Add function prototype.

2015-06-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvticache.c (nvticache_get_by_name_full, nvticache_get_names):
	New functions.
	(nvticache_get_by_oid_full): Use new function.
	(nvticache_get_oids): Remove function.

	* base/nvticache.h: Add prototypes.

2015-06-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_set_login): Check that username is not
	empty.
	(nasl_ssh_userauth): Return on nasl_ssh_set_login() error.

2015-06-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (exec_ssh_cmd): Zero buffer, reset retry counter on
	read success.

2015-06-15  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.h, misc/plugutils.c (plug_set_launch, plug_get_launch):
	Remove unused functions.

2015-06-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/arglists.c (arg_prepend_value): New function.

	* misc/arglists.h: Add function prototype.

	* misc/prefs.c (prefs_set): Use new function.

2015-06-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (_add_plugin_preference)
	(plug_create_from_nvti_and_prefs): Remove functions.
	(get_plugin_preference): Use g_strchomp().

2015-06-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped, plug_get_key),
	nasl/nasl_builtin_find_service.c (plugin_run_find_service): Use
	global_socket instead of SOCKET.
