@@ -586,14 +586,14 @@ try_read_entity_and_string (gnutls_session_t * session, int timeout,
 /**
  * @brief Try read an XML entity tree from the manager.
  *
- * @param[in]   session   Pointer to GNUTLS session.
- * @param[out]  entity    Pointer to an entity tree.
- * @param[out]  string    An optional return location for the text read
- *                        from the session.  If NULL then it simply
- *                        remains NULL.  If a pointer to NULL then it points
- *                        to a freshly allocated GString on successful return.
- *                        Otherwise it points to an existing GString onto
- *                        which the text is appended.
+ * @param[in]   session          Pointer to GNUTLS session.
+ * @param[out]  entity           Pointer to an entity tree.
+ * @param[out]  string_return    An optional return location for the text read
+ *                               from the session.  If NULL then it simply
+ *                               remains NULL.  If a pointer to NULL then it points
+ *                               to a freshly allocated GString on successful return.
+ *                               Otherwise it points to an existing GString onto
+ *                               which the text is appended.
  *
  * @return 0 success, -1 read error, -2 parse error, -3 end of file.
  */
